components dinamycs properties

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,11 +4,26 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png"
+      cardTitle="TESTE DE ANUNCIO"
+      cardDescription="Testando algo novo para o futuro">
+    </app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png"
+      cardTitle="Saiu a nova versão do Angular">
+    </app-small-card>
+
+    <app-small-card
+      photoCover="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png"
+      cardTitle="Saiu a nova versão do Angular">
+    </app-small-card>
+
+    <app-small-card
+      photoCover="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png"
+      cardTitle="Saiu a nova versão do Angular">
+    </app-small-card>
   </div>
 </div>
