--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,16 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png"
+      [src]="photoCover"
       alt=""
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="#"> Saiu a nova versão do Angular </a></h1>
+    <h1><a href="#">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
-      <a href="#">
-      Eu sou um novo teste.
-      </a>
+      <a href="#">{{cardDescription}}</a>
     </p>
   </div>
 </div>
